JVM aware of docker