@@ -46,7 +46,7 @@ VOLUME ${NEXUS_DATA}
 EXPOSE 8081
 WORKDIR ${NEXUS_HOME}
 
-ENV INSTALL4J_ADD_VM_PARAMS="-Xms1200m -Xmx1200m -XX:MaxDirectMemorySize=2g -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs"
+ENV INSTALL4J_ADD_VM_PARAMS="-Xms1200m -Xmx1200m -XX:MaxDirectMemorySize=2g -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs"
 
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
